Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100014

tst_qqmlqt fails on Android

XMLWordPrintable

    • Android
    • c9013be2d9 (qt/qtdeclarative/dev) 2a1d582d69 (qt/qtdeclarative/6.3) 2a1d582d69 (qt/tqtc-qtdeclarative/6.3) c9013be2d9 (qt/tqtc-qtdeclarative/dev) 2a1d582d69 (qt/tqtc-qtdeclarative/6.3.1) 0cbdda52fe (qt/tqtc-qtdeclarative/6.2)

      2 cases from tst_qqmlqt fail on Android

      I QTestLib: FAIL!  : tst_qqmlqt::resolvedUrl() Compared values are not the same
      I QTestLib:    Actual   (qvariant_cast<QUrl>(object->property("resolvedHere")))       : qrc:/data/somewhere.qml
      I QTestLib:    Expected (dataDirectoryUrl().resolved(QStringLiteral("somewhere.qml"))): qrc:/somewhere.qml
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtdeclarative/tests/auto/qml/qqmlqt/tst_qqmlqt.cpp(1184)]
      
      I QTestLib: FAIL!  : tst_qqmlqt::timeRoundtrip(localtime) Compared values are not the same
      I QTestLib:    Actual   (tp.m_getTime): 00:00:00.000
      I QTestLib:    Expected (tp.m_putTime): 22:00:00.000
      I QTestLib:    Loc: [/Users/assam/sources/qt6/qt6/qtdeclarative/tests/auto/qml/qqmlqt/tst_qqmlqt.cpp(1446)]
      

        For Gerrit Dashboard: QTBUG-100014
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            assam Assam Boudjelthia
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: