QQmlDataTest: fix dataDirectoryUrl generation for paths in qrc

When the data directory is located in qrc (like on Android), the data
directory url was generated incorrectly, missing the last '/'.
As a result QQmlDataTest::dataDirectoryUrl().resolved("something") call
was providing incorrect results.
This patch fixes it, which allows to unblacklist
tst_qqmlqt::resolvedUrl() for Android.

Task-number: QTBUG-100014
Pick-to: 6.3 6.2
Change-Id: Id336a698b493edaa6e2ab7d36efbbef1f5acd1d6
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>